--- a/To Do/index.html
+++ b/To Do/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="add-todo">
                     <input type="text" class="entertodo" placeholder="Add somenthing to do" required>
-                    <input type="submit" name="add-btt" id="add-btt" value="+">
+                    <!--<input type="submit" name="add-btt" id="add-btt" value="+">-->
             </div>
         </div>
     </body>
